Change font-family again because it's still not working

--- a/rabbitdewstyle.css
+++ b/rabbitdewstyle.css
@@ -17,7 +17,7 @@ div.job_title {
 }
 
 #banner {
-  font-family: "Lucida Console", Courier, monospace;
+  font-family: "Bitstream Vera Sans Mono", "Courier New", Courier, monospace;
   text-align: center;
   margin: 1em 1em;
 }
