be more specific for pre

--- a/rabbitdewstyle.css
+++ b/rabbitdewstyle.css
@@ -21,6 +21,12 @@ div.job_title {
   text-align: center;
   margin: 1em 1em;
 }
+
+div#banner pre {
+  font-family: "Bitstream Vera Sans Mono", "Courier New", Courier, monospace;
+  text-align: center;
+  margin: 1em 1em;
+}
 img { 
   height: auto;
   width: 20%;
