change banner font color

--- a/rabbitdewstyle.css
+++ b/rabbitdewstyle.css
@@ -1,5 +1,6 @@
 body {
   background-color: lightblue;
+  font-size: medium;
 }
 
 h1 {
@@ -23,6 +24,7 @@ div.job_title {
 }
 
 div#banner pre {
+  font-color: orange;
   font-family: "Bitstream Vera Sans Mono", "Courier New", Courier, monospace;
   text-align: center;
   margin: 1em 1em;
