respect my thing damn you

--- a/rabbitdewstyle.css
+++ b/rabbitdewstyle.css
@@ -21,9 +21,11 @@ div.job_title {
   font-family: "Bitstream Vera Sans Mono", "Courier New", Courier, monospace;
   text-align: center;
   margin: 1em 1em;
+  }
+div#banner img {
   height: auto;
   width: 75%;
-}
+  }
 
 div#banner pre {
         background-color: black;
@@ -32,4 +34,4 @@ div#banner pre {
 	font-weight: bold;
         text-align: center;
         margin: 1em 1em;
-}
+  }
