--- a/rabbitdewstyle.css
+++ b/rabbitdewstyle.css
@@ -1,6 +1,6 @@
 body {
   background-color: lightblue;
-  font-size: 16px;
+  font-size: 1.5;
   }  
 p {
   margin: 1em 3em;
@@ -14,6 +14,12 @@ div.job_title {
   font-family: "Bitstream Vera Sans Mono", "Courier New", Courier, monospace;
   text-align: center;
   margin: 0.5em 0.5em;
+  }
+img {
+  box-shadow: 10px 10px 5px #ccc;
+  -moz-box-shadow: 10px 10px 5px #ccc;
+  -webkit-box-shadow: 10px 10px 5px #ccc;
+  -khtml-box-shadow: 10px 10px 5px #ccc;
   }
 img#jhowell_headshot {
   height: auto;
